[tool.poetry]
name = "ML-BP-estimation"
version = "0.1.0"
description = ""
authors = ["François LaBerge <fgrclaberge@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
vitaldb = "1.1.5"
matplotlib = "^3.5.2"
heartpy = "^1.2.7"
neurokit2 = "^0.2.0"
tensorflow = "^2.9.1"
wfdb = "^4.0.0"
SQLAlchemy = "^1.4.39"
tqdm = "^4.64.0"
wandb = "^0.13.1"

[tool.poetry.dev-dependencies]
pandas = "^1.4.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "src.train"
